# time-keeper

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
apps/claude-parser/: main.py
apps/report-generator/: main.py
apps/session-timer/: main.py
apps/sqlite-store/: main.py  requirements.txt
apps/work-logger-extension/: background.js  export.js  install-host.sh  intercept.css  intercept.html  intercept.js  manifest.json  options.html  options.js  popup.html  popup.js  storage.js
apps/work-logger-extension/native-host/: com.timekeeper.work_logger.json
combos/active-tracker/: main.py
docs/: architecture.md  database-schema.md  faq.md  roadmap.md
examples/apps/claude-parser/: requirements.txt
examples/apps/file-watcher/: main.py
examples/apps/git-summarizer/: main.py  requirements.txt
examples/apps/report-generator/: requirements.txt
examples/apps/work-logger-extension/: intercept.js  manifest.json  options.css  options.html  popup.css
examples/apps/work-logger-extension/native-host/: work_logger_host.py
examples/combos/work-summarizer/: main.py
time_keeper/: claude.py  cli.py  config.py  dashboard.py  git.py  ingest.py  logrotate.py  menubar.py  reports.py  service.py  store.py  watcher.py
